fix to hide search list component on mobile

--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,7 @@ body {
  margin-left: 15px;
  margin-right: 15px;
 }
+
+.card-block {
+  height: 300px;
+}
